# google-form-automate

./: .gitignore  README.md  automate_cli.py  career_survey_data.json  create_dataset.py  data_input.json  discovered_employee_mapping.json  employee_data.json  error_response.html  form_discovery.py  form_submitter.py  generic_dataset.py  main.py  mapping.json  pyproject.toml
