[project]
name = "automate"
version = "0.1.0"
description = "Discover Google Form fields, generate responses, and optionally submit them."
authors = [
    {name = "shrawan sunar",email = "shrawansunar.6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[project.scripts]
gform-automate = "automate_cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

